--- a/cmf-server/Dockerfile
+++ b/cmf-server/Dockerfile
@@ -1,11 +1,21 @@
-FROM centos:centos6
+FROM centos:7.1.1503
+
+# be my friend ;)
 MAINTAINER gpolaert (@gpolaert)
 
-RUN yum update -y
-ADD http://archive.cloudera.com/cm5/redhat/6/x86_64/cm/cloudera-manager.repo /etc/yum.repos.d/
+# repos
+RUN echo 7.1.1503 > /etc/yum/vars/releasever
+ADD http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/cloudera-manager.repo /etc/yum.repos.d/
 
+# need to used systemd instead of fakesystemd (@see http://bit.ly/1UgISI5)
+RUN yum clean all && yum swap -y fakesystemd systemd
 
+# cloudera packages
 RUN yum install -y cloudera-manager-daemons oracle-j2sdk1.7
-RUN yum install -y cloudera-manager-server 
+RUN yum install -y cloudera-manager-server
+
+# env vars
+ENV CMF_CONF_DIR /cmf/config
+ENV JAVA_HOME /usr/java/jdk1.7.0_67-cloudera/
 
 CMD cmf-server
