--- a/cmf-server/Dockerfile
+++ b/cmf-server/Dockerfile
@@ -12,10 +12,13 @@ RUN yum clean all && yum swap -y fakesystemd systemd
 
 # cloudera packages
 RUN yum install -y cloudera-manager-daemons oracle-j2sdk1.7
-RUN yum install -y cloudera-manager-server
+RUN yum install -y cloudera-manager-server 
 
 # env vars
-ENV CMF_CONF_DIR /cmf/config
+ENV CMF_JAVA_OPTS -Xmx2G -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
+ENV CMF_JDBC_DRIVER_JAR /cmf/config-db/:/usr/share/java/mysql-connector-java.jar:/usr/share/java/oracle-connector-java.jar
 ENV JAVA_HOME /usr/java/jdk1.7.0_67-cloudera/
+
+EXPOSE 7180 7182
 
 CMD cmf-server
